--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pattern-bot",
   "version": "1.0",
   "author": "@26BZ",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "homepage": "https://26bz.online/",
   "description": "A Discord bot that responds to text phrases using predefined patterns and responses.",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "discord.js": "^14.19.3",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.2.0",
     "winston": "^3.17.0"
   }
 }
