feat: add confidence thresholds and blacklist

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DISCORD_TOKEN=
 DEBUG=false
-# Set BLACKLISTED_CHANNELS as comma-separated channel IDs if needed
-# BLACKLISTED_CHANNELS=123456789,987654321
+#BLACKLISTED_CHANNELS=123456789012345678,987654321098765432
+CONFIDENCE_THRESHOLD_MENTION=0.6
+CONFIDENCE_THRESHOLD_QUESTION=0.6
+CONFIDENCE_THRESHOLD_DEFAULT=0.85
