--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DEBUG=false
 CONFIDENCE_THRESHOLD_MENTION=0.6
 CONFIDENCE_THRESHOLD_QUESTION=0.6
 CONFIDENCE_THRESHOLD_DEFAULT=0.85
+LOG_LEVEL=info
+CONSOLE_LOG_LEVEL=pattern
