--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "start": "node index.js"
     },
     "dependencies": {
+        "consola": "^3.4.2",
         "discord.js": "^14.19.3",
         "dotenv": "^17.2.2",
         "winston": "^3.17.0",
